--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             flex-direction: column;
             gap: 15px;
             align-items: center;
-            margin-bottom: 40px; /* Space before the legal text */
         }
 
         .btn {
@@ -50,7 +49,7 @@
             color: #fff;
             border: 1px solid #fff;
             padding: 12px 40px;
-            width: 250px; /* Slightly wider to fit EULA text */
+            width: 280px;
             border-radius: 5px;
             transition: all 0.3s ease;
             font-size: 0.8rem;
@@ -66,19 +65,13 @@
         .btn-primary {
             background-color: #fff;
             color: #000;
-            font-weight: bold;
         }
 
-        .btn-primary:hover {
-            background-color: #e2e2e2;
-        }
-
-        /* Fixed Legal Text Styling */
         .footer-legal {
             font-size: 0.75rem;
             color: #777;
             line-height: 1.6;
-            margin-top: 20px;
+            margin-top: 40px;
             border-top: 1px solid #333;
             padding-top: 20px;
         }
@@ -96,18 +89,18 @@
     <p class="subtitle">Advanced Monitoring & Management</p>
 
     <div class="links">
-        <a href="privacy.html" class="btn btn-primary">Privacy Policy</a>
-        <a href="eula.html" class="btn btn-primary">End User License Agreement</a>
+        <a href="features.html" class="btn btn-primary">Explore Features</a>
+        
+        <a href="privacy.html" class="btn">Privacy Policy</a>
+        <a href="eula.html" class="btn">End User License Agreement</a>
         <a href="https://www.paypal.com/donate/?hosted_button_id=RBKHUMHD28TJ6" target="_blank" class="btn">Donate</a>
         <a href="mailto:teslapowerwallelite@gmail.com" class="btn">Email Support</a>
     </div>
 
     <div class="footer-legal">
-        This application is a third-party utility and is not endorsed by or affiliated with Tesla, Inc. 
-        <br><br>
-        All other trademarks are the property of their respective owners. <br>
-        Copyright © 2026 Petros Pashalis. All rights reserved. <br><br>
-        Tesla, Powerwall, and the Tesla logo are trademarks or registered trademarks of Tesla, Inc.
+        This application is a third-party utility and is not endorsed by or affiliated with Tesla, Inc.<br><br>
+        Tesla, Powerwall, and the Tesla logo are trademarks or registered trademarks of Tesla, Inc.<br>
+        Copyright © 2026 Petros Pashalis. All rights reserved.
     </div>
 </div>
 
