--- a/eula.html
+++ b/eula.html
@@ -36,6 +36,7 @@
 <body>
 
 <div class="container">
+    <a href="index.html" class="back-link">&larr; Return to Dashboard</a>
     <h1>End User License Agreement</h1>
     <p>Last Updated: January 22, 2026</p>
 
@@ -75,7 +76,7 @@
 </div>
 
 <div class="footer">
-    &copy; 2026 Tesla Powerwall Elite. Independent Third-Party Software. 
+    &copy; 2026 Petros Pashalis. Independent Third-Party Software. 
 </div>
 
 </body>
