--- a/privacy.html
+++ b/privacy.html
@@ -32,9 +32,11 @@
         .footer { margin-top: 50px; font-size: 0.85em; color: #777; text-align: center; }
     </style>
 </head>
+
 <body>
 
 <div class="container">
+    <a href="index.html" class="back-link">&larr; Return to Dashboard</a>
     <h1>Privacy Policy</h1>
     <p><strong>Effective Date:</strong> 20 January 2026</p>
 
@@ -67,7 +69,7 @@
 </div>
 
 <div class="footer">
-    &copy; 2026 Tesla Powerwall Elite. This app is not affiliated with or endorsed by Tesla, Inc.
+    &copy; 2026 Petros Pashalis. This app is not affiliated with or endorsed by Tesla, Inc.
 </div>
 
 </body>
