--- a/features.html
+++ b/features.html
@@ -44,7 +44,8 @@
             <span class="badge">Immediate Control</span>
             <h2>Forced Solar & Active Charge</h2>
             <p>Take absolute command of your energy storage. <strong>Forced Solar Charge</strong> prioritizes clean energy capture regardless of grid export rules. Need power fast? <strong>Forced Active Charge</strong> draws from the grid at maximum velocity to prepare for upcoming outages or high-use events.</p>
-        </div>
+                    <p>Elite also features an <strong>Adjustable Shoulder Window</strong>—allowing you to customize peak/off-peak timing because convenience matters more than just the cheapest rate.</p>
+       </div>
         <div class="feature-image"><img src="screenshots/Manual Override Panel.png" alt="Manual Override Panel" style="width: 100%; border-radius: 4px;"></div>
     </div>
 
@@ -60,9 +61,10 @@
     <div class="feature-item">
         <div class="feature-text">
             <span class="badge">Convenience</span>
-            <h2>Always-On Command Center</h2>
+            <<h2>Always-On Command Center</h2>
             <p>Designed for dedicated monitoring stations. Enable <strong>Screen Always On</strong> to transform any device into a permanent wall-mounted energy terminal. With <strong>Persistent Login</strong> and <strong>Adjustable Text Sizes</strong>, your data is always visible and readable from across the room.</p>
-        </div>
+                <strong>Viewing Mode:</strong> Simply <strong>Double Tap</strong> the dashboard to enter a clean, focused viewing mode—perfect for hands-free monitoring.
+            </div>
         <div class="feature-image"><img src="screenshots/Display Settings.png" alt="Display Settings" style="width: 100%; border-radius: 4px;"></div>
     </div>
 
@@ -70,21 +72,71 @@
         <div class="feature-text">
             <span class="badge">Professional Management</span>
             <h2>Multi-Site Monitoring</h2>
-            <p>Manage your entire energy footprint from one interface. Seamlessly toggle between multiple properties or view a unified fleet summary. Elite also features an <strong>Adjustable Shoulder Window</strong>—because convenience matters more than just the cheapest rate.</p>
+            <p>Manage your entire energy footprint by toggling between properties linked to your Tesla account. While each instance of Elite focuses on a single site for maximum precision, the app is designed for high-performance multi-window use.</p>
+            
+            <div class="tip-box">
+                <strong>Windows Multi-Window Support:</strong> To monitor and command multiple sites simultaneously, hold <strong>SHIFT + Left Click</strong> on the app icon or a property link to launch a new independent window for each location.
+            </div>
+             </div>
+        <div class="feature-image">
+            <img src="screenshots/Property Selection.png" alt="Property Selection and Multi-Window View"style="width: 100%; border-radius: 4px;">
         </div>
-        <div class="feature-image"><img src="screenshots/Property Selection.png" alt="Property Selection" style="width: 100%; border-radius: 4px;"></div>
     </div>
 	<div class="feature-item">
         <div class="feature-text">
             <span class="badge">Data Intelligence</span>
             <h2>Deep Analytics & CSV Export</h2>
             <p>Your energy data belongs to you. Elite captures high-resolution <strong>historical graphs</strong> of your solar production, grid usage, and battery cycles. Need to run your own numbers? Use the <strong>one-click CSV Export</strong> to download your raw energy logs. Perfect for spreadsheet wizards who want to track long-term ROI or audit utility bill accuracy.</p>
-        </div>
+        <div class="tip-box">
+                <strong>Live Graphing:</strong> Includes <strong>daily and monthly graphs</strong> that automatically update every 5 minutes while viewing to ensure your historical data is always current.
+            </div>
+		</div>
         <div class="feature-image">
             <img src="screenshots/Analytics and Export.png" alt="Analytics Graphs and CSV Export" style="width: 100%; border-radius: 4px;">
         </div>
     </div>
-	
+	    <div class="feature-item">
+        <div class="feature-text">
+            <span class="badge">Universal Accessibility</span>
+            <h2>Adaptive Across All Devices</h2>
+            <p>Our <strong>Responsive UI engine</strong> automatically adapts to any screen size—supporting <strong>Portrait</strong> on mobile for quick checks and <strong>Landscape</strong> on tablets and desktops for a full command center view.</p>
+        </div>
+        <div class="feature-image">
+            <img src="screenshots/Multi-Device View.png" alt="App responsive on Mobile, Tablet and Desktop" style="width: 100%; border-radius: 4px;">
+        </div>
+    </div>
+
+    <div class="feature-item">
+        <div class="feature-text">
+            <span class="badge">Platform Availability</span>
+            <h2>Where to Use Elite</h2>
+            <p>Full support for <strong>Windows 10/11</strong>, <strong>Xbox</strong>, and <strong>Windows Phone</strong>. Stay tuned: <strong>Android and iOS versions are currently in development</strong> and coming soon.</p>
+        </div>
+        <div class="feature-image">
+            <img src="screenshots/Platform Support.png" alt="App running on Windows, Xbox, and Windows Phone" style="width: 100%; border-radius: 4px;">
+        </div>
+    </div>
+
+    <div class="feature-item">
+        <div class="feature-text">
+            <span class="badge">Pure Data</span>
+            <h2>Zero Ads. Just Data.</h2>
+            <p>Tesla Powerwall Elite is a <strong>100% ad-free experience</strong>. No banners, no pop-ups, and no distractions—just the clean, high-resolution energy insights you need.</p>
+        </div>
+        <div class="feature-image">
+            <img src="screenshots/ad-free.png" alt="Clean Ad-Free Interface" style="width: 100%; border-radius: 4px;">
+        </div>
+    </div>
+	    <div class="feature-item">
+        <div class="feature-text">
+            <span class="badge">Risk-Free Exploration</span>
+            <h2>Safe Demonstration Mode</h2>
+            <p>New to Elite? Use <strong>Demonstration Mode</strong> to explore every corner of the interface and see exactly what the app can do without sending a single command to your actual hardware.</p>
+        </div>
+        <div class="feature-image">
+            <img src="screenshots/demo-mode.png" alt="Demonstration Mode Interface" style="width: 100%; border-radius: 4px;">
+        </div>
+    </div>
 </div>
 </body>
 </html>
