updated for mobile display

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla Powerwall Elite</title>
     <style>
+        /* Ensures the page takes up the full screen height without clipping */
         body, html {
-            height: 100%;
+            min-height: 100vh;
             margin: 0;
             font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-color: #000;
@@ -19,8 +20,10 @@
 
         .container {
             padding: 20px;
+            width: 90%; /* Prevents edges from touching screen on mobile */
             max-width: 900px;
             animation: fadeIn 1.5s ease-in-out;
+            box-sizing: border-box;
         }
 
         h1 {
@@ -48,13 +51,15 @@
             text-decoration: none;
             color: #fff;
             border: 1px solid #fff;
-            padding: 12px 40px;
-            width: 280px;
+            padding: 12px 0; /* Vertical padding only, width handled below */
+            width: 100%;
+            max-width: 280px;
             border-radius: 5px;
             transition: all 0.3s ease;
             font-size: 0.8rem;
             letter-spacing: 1px;
             text-transform: uppercase;
+            display: inline-block;
         }
 
         .btn:hover {
@@ -76,6 +81,20 @@
             padding-top: 20px;
         }
 
+        /* Mobile Specific Adjustments */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.8rem; /* Smaller font so it doesn't overflow */
+                letter-spacing: 2px;
+            }
+            .subtitle {
+                font-size: 1rem;
+            }
+            .btn {
+                padding: 14px 0; /* Slightly larger touch target for thumbs */
+            }
+        }
+
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
@@ -90,7 +109,6 @@
 
     <div class="links">
         <a href="features.html" class="btn btn-primary">Explore Features</a>
-        
         <a href="privacy.html" class="btn">Privacy Policy</a>
         <a href="eula.html" class="btn">End User License Agreement</a>
         <a href="https://www.paypal.com/donate/?hosted_button_id=RBKHUMHD28TJ6" target="_blank" class="btn">Donate</a>
